--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/5R6pwng/th-removebg-preview-5.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Life Puls</title>
+    <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=workSans:wght@300;400;500;700&display=swap"
+/>
   </head>
   <body>
     <div id="root"></div>
